...
            android:textSize="30dp"
            android:inputType="textPersonName"
            android:text="@string/add_name" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/addName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/edit_message"
            android:inputType="textPersonName"/>


        <Button
            android:id="@+id/saveButton"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/save"
            />

...
