...
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/edit_message"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
...
